[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindcore-memory"
version = "0.1.12"
description = "MCP Server for AI long-term memory and context management"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lao Hei", email = "1410770089@qq.com" }
]
license = {text = "MIT"}

keywords = ["mcp", "memory", "context", "ai", "llm", "agent"]

[project.urls]
Homepage = "https://github.com/woshilaohei/mindcore-memory-mcp"
Repository = "https://github.com/woshilaohei/mindcore-memory-mcp"
Documentation = "https://github.com/woshilaohei/mindcore-memory-mcp#readme"
"PyPI" = "https://pypi.org/project/mindcore-memory/" = ["mcp", "memory", "context", "ai", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",

    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "json-rpc>=1.5.0",
    "structlog>=24.0.0,<25.0.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
chinese = [
    "jieba>=0.42",
]
encrypt = [
    "cryptography>=41.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
mindcore-memory = "mindcore_memory.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mindcore_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "E402"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = false
